# BijutsuBase

./: .gitignore  AGENTS.MD  README.md  docker-compose.yml
nginx/: nginx.conf
server/: Dockerfile  alembic.ini  main.py  pyproject.toml  start.sh
server/alembic/: env.py
server/alembic/versions/: 07b67b4b7377_initial_migration.py  14ca4942a091_initial_migration.py  2238095eda3b_initial_schema_with_lowercase_categories.py  2daab9c187c8_initial_migration.py  62dc464df21a_recreate_initial_migration.py  845fea78af1d_update_models.py  95cd3907f99f_initial_migration_add_files_table.py  a1512bd0b340_add_phash_column_for_visual_similarity.py  a75ccee16d61_initial_schema_with_tag_source.py  b8e4f3a2c1d9_add_users_table_for_authentication.py  c3f5a8d2e1b7_add_username_column_to_users.py  d275a13abb32_initial_migration_add_users_table.py  d4e5f6a7b8c9_add_avatar_column_to_users.py  deb2fc83c86d_sync_models.py  e39def3a5798_initial_migration.py  (+1 more)
server/api/: __init__.py  explore.py  families.py  files.py  health.py  media.py  pools.py  setup.py  tags.py  upload.py
server/auth/: __init__.py  backend.py  config.py  schemas.py  user_manager.py  users.py
server/database/: __init__.py  config.py
server/ml/: __init__.py  config.py  model.py  onnxmodel.py
server/models/: __init__.py  family.py  file.py  pool.py  tag.py  user.py
server/tagging/: __init__.py
server/tasks/: __init__.py  processing.py
server/utils/: __init__.py  danbooru_utils.py  file_info.py  file_storage.py  pagination.py  parent_determination.py  phash.py  rating.py  similarity_family.py  thumbnail_gen.py
(+70 files in other folders)
