[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.1",
    "fastapi>=0.120.4",
    "moviepy>=1.0.3",
    "pillow>=12.0.0",
    "psycopg[binary]>=3.2.12",
    "pydantic>=2.12.3",
    "python-magic>=0.4.27",
    "python-multipart>=0.0.20",
    "sqlalchemy[asyncio]>=2.0.44",
    "uvicorn[standard]>=0.38.0",
]
